[gd_scene load_steps=5 format=3 uid="uid://bcwysn14v0b8m"]

[ext_resource type="Script" path="res://coffee/hot/2_milk/milk.gd" id="1_ogljj"]
[ext_resource type="Texture2D" uid="uid://xx25b0ms4ah7" path="res://assets/Assets finalizados/Jarra de leite A.png" id="2_pcs4m"]
[ext_resource type="Texture2D" uid="uid://bq63fganm2y0b" path="res://assets/Assets finalizados/Jarra de leite B.png" id="3_rcvw4"]
[ext_resource type="Texture2D" uid="uid://imli0kxvcw3k" path="res://assets/Assets finalizados/Jarra de leite C.png" id="4_vvwxr"]

[node name="Milk" type="Node2D"]
script = ExtResource("1_ogljj")

[node name="Small" type="Button" parent="."]
unique_name_in_owner = true
offset_left = 248.0
offset_top = 406.0
offset_right = 542.0
offset_bottom = 719.0
icon = ExtResource("4_vvwxr")

[node name="Medium" type="Button" parent="."]
unique_name_in_owner = true
offset_left = 787.0
offset_top = 289.0
offset_right = 1118.0
offset_bottom = 731.0
icon = ExtResource("3_rcvw4")

[node name="Large" type="Button" parent="."]
unique_name_in_owner = true
offset_left = 1344.0
offset_top = 175.0
offset_right = 1765.0
offset_bottom = 739.0
icon = ExtResource("2_pcs4m")
icon_alignment = 1

[node name="Next" type="Button" parent="."]
unique_name_in_owner = true
visible = false
offset_left = 1630.0
offset_top = 891.0
offset_right = 1822.0
offset_bottom = 1019.0
text = "NEXT"

[connection signal="pressed" from="Small" to="." method="_on_small_pressed"]
[connection signal="pressed" from="Medium" to="." method="_on_medium_pressed"]
[connection signal="pressed" from="Large" to="." method="_on_large_pressed"]
[connection signal="pressed" from="Next" to="." method="_on_next_pressed"]
